docker and k8s configs for web server and lookup server

--- a/deploy/lookup-server/deployment.yaml
+++ b/deploy/lookup-server/deployment.yaml
@@ -17,3 +17,6 @@ spec:
         image: andreisfrent/ahv-defender:lookup-server
         ports:
         - containerPort: 12000
+      imagePullSecrets:
+      - name: regcred
+
