webserver files, fixed dockerfiles after issues with glibc on alpine

--- a/deploy/lookup-server/deployment.yaml
+++ b/deploy/lookup-server/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: lookup-server
         image: andreisfrent/ahv-defender:lookup-server
+        imagePullPolicy: Always
         ports:
         - containerPort: 12000
       imagePullSecrets:
